Fix carousel cropping issue

--- a/static/css/stylesOneAlbum.css
+++ b/static/css/stylesOneAlbum.css
@@ -1,8 +1,37 @@
-.container{
-    flex-grow: 3;
-    margin-top: 10%;
+.container {
+    margin-top: 5%;
 }
 
-.oneImage img{
+@media only screen and (min-width: 100px){
+    .carousel-inner img{
+        border-radius: 5px;
+        object-fit: cover;
+        object-position: center;
+        height: 35vh;
+        max-width: 100%;
+        overflow: hidden;
+    }
+}
+
+@media only screen and (min-width: 600px){
+    .carousel-inner img{
+        border-radius: 5px;
+        object-fit: cover;
+        object-position: center;
+        height: 60vh;
+        max-width: 100%;
+        overflow: hidden;
+    }
+}
+
+
+.one-image img{
+    border-radius: 5px;
     width: 100%;
+}
+
+
+/* Article Content Formatting */
+a{
+    text-decoration: none;
 }
